static/style/style.scss
/* ... */
.footer {
  background-color: $okf-primary;
  margin: 30px auto 0;
  padding: 2rem 0;
  font-size: 0.9em;
  overflow: hidden;
  color: #fff;

  .nav-items {
    margin-top: 3px;
  }

  .row {
    padding-left: 15px;
    padding-right: 15px;
  }

}

.cellar {
  background-color: $okf-secondary;
  padding: 1em 0;
  font-size: 0.8em;
  color: #ccc;
  a, a:hover {
    color: #ccc;
  }
  p {
    padding-top: 18px;
  }

  .logo-cellar {
    width: 170px;
    height: auto;
  }

}

.highlight-link {
  display: inline-block;
  line-height: 2em;
  border: 2px solid $okf-primary;
  padding: 0.5em;
  text-align: center;
  color: $okf-primary;
  width: 100%;

  &:hover {
    text-decoration: none;
    color: darken($okf-primary, 20%);
    border-color: darken($okf-primary, 20%);
  }
}

.dark-section {
  background-color: $okf-tertiary;
  color: #fff;

  h2 {
    color: #fff;
    //margin-top: 15px;
  }

  .highlight-link {
    color: #fff;
    border-color: #fff;
  }

  .highlight-link:hover {
    border-color: darken(#fff, 20%);
    color: darken(#fff, 20%);
  }

}

.padded-row {
  padding: 5rem 0 6rem;
}

.padded-top {
  padding-top: 15px;

}

.overflow-hidden {
  overflow: hidden;
}

.row-flex, .row-flex > div[class*='col-'] {
  @include flexbox();
  @include flex(0, 0, auto);
}

.row-flex-wrap {
  @include flex-dir(row);
  @include flex-wrap(wrap);
  -webkit-flex-flow: row wrap;
  align-content: flex-start;
  @include flex(0);
  //flex:0;
}

.row-flex > div[class*='col-'], .container-flex > div[class*='col-'] {
  margin: -.2px; /* hack adjust for wrapping */
}

.container-flex > div[class*='col-'] div, .row-flex > div[class*='col-'] div {
  width: 100%;
}

.flex-col {
  @include flexbox();
  @include flex(1, 100%, auto);
  @include flex-dir(column);
  @include flex-wrap(nowrap);
}

.flex-grow {
  display: flex;
  -webkit-flex: 2;
  flex: 2;
}

.lurking-header {
  display: block;
  background-color: #fff;
  margin: -150px auto 2em;
  padding: 15px 20px 40px;
  width: 100%;
  position: relative;
  min-height: 1px;

  h1, h2 {
    text-align: center;
  }

  h2 {
    margin-top: 50px;
  }

  @include MQ-M() {
    padding: 15px 60px 40px;
  }
}

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 0px;
  margin-bottom: 20px;
  height: 0;
  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

.subtle-section {
  text-align: center;
  color: $light-text-color;
  margin: 60px 0 20px;
}

.icon-list {
  font-size: 14px;
  line-height: 20px;

  dt {
    float: left;
    width: 20px;
    overflow: hidden;
    clear: left;
    text-align: right;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  dd {
    margin-left: 35px;
  }
}

.big-icon-list {
  font-size: 20px;
  line-height: 26px;

  dt {
    width: 30px;
  }

  dd {
    margin-left: 35px;
  }
}

//start page

.start-banner {
  background-color: $okf-primary;
  padding-top: 30px;
  padding-bottom: 30px;
  text-align: center;

  img {
    width: 100%;
    height: auto;
    max-width: 400px;
  }

  .row > div {
    margin: 0;
    padding: 0;
    //display: flex;
    //align-items: center;
    //justify-content: center;
    //text-align: right;
  }

  .start-headline {
    margin: 0;
    margin-top: 40px;
    margin-bottom: 20px;
    padding: 0;
    color: #fff;
    text-align: right;
  }

  h4 {
    text-align: center;
  }

}

.start-opener {
  text-align: center;

  .intro {
    font-size: 1.2em;
    line-height: 1.4em;
    font-weight: bold;
  }

  .kpi {
    font-size: 1.4em;
    margin-top: 20px;
  }
}

.showcase {
  padding: 2rem 0 2rem;

  h4 {
    color: $okf-primary;
    margin: 10px 0 0;
  }

  img {
    width: 100%;
    /* height: 200px; */
  }

}

//themen page

.themen-item {
  background-color: #fff;
  margin-bottom: 40px;

  .themen-image {
    background-position: center 0;
    background-size: auto 100%;
    background-repeat: no-repeat;
    background-color: transparent;
    min-height: 200px;
    min-width: 200px;
  }

  .themen-col {
    text-align: center;
  }

  @include MQ-M() {
    @include flexbox();
    @include flex(0, 0, auto);
    @include flex-dir(row);

    .themen-col {
      text-align: left;
      padding-left: 30px;
      padding-right: 30px;
    }
  }
}

//projekte page

.project-item {

}
/* ... */

